# universal-code-rag

./: .dockerignore  .gitignore  DEPLOYMENT.md  DOCKER_RUN_GUIDE.md  Dockerfile  GUIDE_AR.md  README.md  SUPPORTED_LANGUAGES.md  add_missing_languages.py  analyze_repo_size.py  cli.py  config.py  config_addon_queries.py  debug_ts.py  docker-compose.prod.yml  docker-compose.yml  final_language_summary.md  final_missing_languages.py  health_check.py  index_state.db  indexer.py  rag.py  requirements.txt  verify_language_coverage.py  web_app.py
chunkers/: __init__.py  adaptive_chunker.py  base_chunker.py  cpp_chunker.py  fallback_chunker.py  file_architectures.py  gn_chunker.py  javascript_chunker.py  mojom_chunker.py  python_chunker.py  tree_sitter_chunker.py
test_db/: chroma.sqlite3
test_samples/: BUILD.gn  content_settings.mojom  extension.js  render_frame_host.cc  security_manager.py
test_samples/adaptive_test/: Makefile  api.proto  config.yaml  data.csv  page.html  sample.md  schema.sql  template.jinja
test_samples/all_languages/: README.md  UserService.hs  UserService.kt  UserService.lua  UserService.ml  UserService.scala  UserService.swift  UserService.ts  config.toml  deploy.sh  pom.xml  styles.css
test_samples/comprehensive/: Complex.cs  Complex.php  ComplexJava.java  complex.cc  complex.go  complex.py  complex.rb  complex.rs
test_samples/data/: docker-compose.yml  package.json  schema.sql
test_samples/universal/: Hello.cs  HelloWorld.java  hello.go  hello.php  hello.rb  hello.rs
test_samples/web/: test.html
tests/: test_adaptive_chunking.py  (+4 more)
(+4 files in other folders)
